# kraken

./: .gitignore  README.md  pyproject.toml
assets/: sample_config.toml
assets/systemd/: kraken-carousel.service  kraken-tray.service
assets/udev/: 99-kraken.rules
docs/: DOCUMENTACAO_TECNICA.md  MANUAL_DO_USUARIO.md
scripts/: gif_black_bg.py
src/kraken/: __init__.py
src/kraken/carousel/: engine.py  playlist.py
src/kraken/cli/: app.py
src/kraken/cli/commands/: carousel.py  config_cmd.py  device.py  lcd.py  status.py  sysinfo.py  tray.py
src/kraken/config/: manager.py  paths.py  schema.py
src/kraken/core/: device.py  exceptions.py  gif.py  lcd.py  models.py  sensors.py
src/kraken/gui/: app.py  main_window.py  threads.py  tray.py
src/kraken/gui/widgets/: carousel_panel.py  device_info.py  lcd_panel.py  status_panel.py  sysinfo_panel.py
src/kraken/hwmon/: discovery.py  reader.py
src/kraken/sysinfo/: collector.py  renderer.py
tests/: conftest.py  test_carousel.py  test_cli.py  test_config.py  test_gif.py  test_hwmon.py  test_lcd.py  test_models.py  test_sensors.py  test_sysinfo.py
