[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken"
version = "0.1.0"
description = "NZXT Kraken LCD & sensor manager for Linux"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "liquidctl>=1.14.0",
    "click>=8.0",
    "Pillow>=10.0",
    "tomli_w>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
kraken = "kraken.cli.app:cli"

[project.gui-scripts]
kraken-gui = "kraken.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests that require real Kraken hardware",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
